--- a/reduxproject/src/Details.css
+++ b/reduxproject/src/Details.css
@@ -1,36 +1,91 @@
-.overall{
-    margin: 5px 40px;
-    background-color: white;
+.overall {
+    margin: 0 20px;
+    background-color: rgb(230, 243, 255);
 }
 
-.main{
+.overall-items {
+    margin: 0 200px;
+    text-align: left;
+    padding: 20px 40px;
+}
+
+.main {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
-.item{
+.item {
     width: max-content;
     font-size: 22px;
     float: left;
 }
-.item input{
-    width: 400px;
+
+.head-details p {
+    font-size: 22px;
 }
-.item p{
-    color:rgb(127, 127, 144);
+
+#note {
+    color: rgb(78, 12, 176);
+    font-weight: 700;
+}
+
+.input {
+    height: 40px;
+    width: 400px;
+    display: flex;
+    justify-content: space-between;
+    border: 2px solid rgb(78, 12, 176);
+}
+
+.input input {
+    margin: 5px 4px;
+    width: 400px;
+    border: none;
+}
+
+.input span {
+    margin-right: 5px;
+}
+
+.item p {
+    color: rgb(127, 127, 144);
     text-align: left;
     font-weight: 700;
 }
-.Doc-sub{
-    width: 200vh;
-    height: 250px;
+
+.Doc-sub {
+    height: 400px;
+    min-width: fit-content;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 2px dotted blueviolet;
-    margin-top: 10px;
-
+    border: 2px dashed blueviolet;
+    border-radius: 40px;
+    margin-top: 25px;
 }
-.Doc-sub{
 
+.Doc-sub button {
+    background-color: blueviolet;
+    height: 50px;
+    border-radius: 40px;
+}
+
+.final {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.final button {
+    font-size: 25px;
+    background-color: blueviolet;
+    color: aliceblue;
+    border: 2px solid blueviolet;
+    border-radius: 10px;
+}
+
+#button1 {
+    background-color: white;
+    color: blueviolet;
+    border: 2px solid blueviolet;
 }
